restructured file organisation